continue working of projects details: chatbot fallback classifier

--- a/projects.html
+++ b/projects.html
@@ -50,22 +50,54 @@
           <p class="note"><strong>Tags: </strong>Professional, Data Science, NLP, Python</p>
           <div class="project-urls">
             <a href="" target="_blank"><i class="fab fa-github"></i></a>
-            <a class="detail" href="">View Case Study</a>
+            <a class="detail" href="chatbot_fallback_classifier.html">View Case Study</a>
           </div>
         </div>
     </div>
 
     <div class="project" data-aos="fade-up">
       <div class="project-image">
-        <img src="src/assets/audience_segmentation.jpg">
-        <p>Photo by <a href="https://unsplash.com/@myphotos297?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">84 Video</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-cell-phone-with-various-app-icons-X8ejw0g0C_g?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+        <img src="src/assets/netflix.jpg">
+        <p>Photo by <a href="https://unsplash.com/@giordanorossoni?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Giordano Rossoni</a> on <a href="https://unsplash.com/photos/person-using-macbook-pro-on-white-table-sx1f8vqTsu8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
       </div>
       <div class="project-content">
-        <h2 class="title">Audience Segmentation Models</h2>
-        <p class="paragraph">Develop a audience segmentation model based on digital marketing:newsletter activities data to help client find their best audience for future campaigns.</p>
-        <p class="note"><strong>Tags: </strong>Professional, Data Science, Machine Learning, Clustering, RFM</p>
+        <h2 class="title">Netflix Navigator: Illuminating the IMDb Realm</h2>
+        <p class="paragraph">Embark on an IMDb odyssey through Netflix's expansive universe with our cutting-edge dashboard, featuring 15 years' worth of movies and TV shows. Our Gaussian Mixture model separates the best from the rest, unveiling top-rated gems for your viewing pleasure.</p>
+        <p class="note"><strong>Tags: </strong>Personal, Data Science, Machine Learning, Looker, Python</p>
         <div class="project-urls">
-          <a href="" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://lookerstudio.google.com/reporting/ca55cecd-6cfd-4d30-9ae8-c344ccb524a7/page/A5mE" target="_blank"><i class="fas fa-chart-line"></i></a>
+          <a class="detail" href="">View Case Study</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project" data-aos="fade-up">
+      <div class="project-image">
+        <img src="src/assets/college_students.jpg">
+        <p>Photo by <a href="https://unsplash.com/@dollargill?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Dollar Gill</a> on <a href="https://unsplash.com/photos/man-reading-in-library-qlP7MgTFwpk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
+      </div>
+      <div class="project-content">
+        <h2 class="title">A Robust Recommendation System for Undergraduate Program Selection</h2>
+        <p class="paragraph">Developing an advanced machine learning-based recommendation system, employing a robust classification model, to facilitate the optimal selection of undergraduate programs.</p>
+        <p class="note"><strong>Tags: </strong>Educational, Data Science, Machine Learning, Education, Python</p>
+        <div class="project-urls">
+          <a href="https://github.com/riorizkiaryanto/recommendation-system-undergraduate-program" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="detail" href="">View Case Study</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project" data-aos="fade-up">
+      <div class="project-image">
+        <img src="src/assets/power_bi.jpg">
+        <p>Photo by <a href="https://unsplash.com/@olenkasergienko?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Olena Bohovyk</a> on <a href="https://unsplash.com/photos/macbook-pro-dIMJWLx1YbE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+      </div>
+      <div class="project-content">
+        <h2 class="title">Power BI - Dashboard Consulting and Development</h2>
+        <p class="paragraph">Assist client in developing a business dashboard that will help them gather information quickly. Act as a consultant as well as the developer who actually build the dashboard and write the query in the back-end.</p>
+        <p class="note"><strong>Tags: </strong>Professional, Consultant, Data Dashboard, Power BI</p>
+        <div class="project-urls">
+          <!-- <a href="" target="_blank"><i class="fab fa-github"></i></a> -->
           <a class="detail" href="">View Case Study</a>
         </div>
       </div>
@@ -86,6 +118,91 @@
         </div>
       </div>
     </div>
+
+    <div class="project" data-aos="fade-up">
+      <div class="project-image">
+        <img src="src/assets/nba_players.jpg">
+        <p>Photo by <a href="https://unsplash.com/@r1naldi?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Otavio Rinaldi</a> on <a href="https://unsplash.com/photos/a-person-holding-a-basketball-Gd-w-yUOsE0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
+      </div>
+      <div class="project-content">
+        <h2 class="title">Exploring Player Similarities: Clustering NBA Players</h2>
+        <p class="paragraph">Utilize a state-of-the-art clustering model to effectively segment NBA players, leveraging their performance data from the 2017-2018 season.</p>
+        <p class="note"><strong>Tags: </strong>Educational, Data Science, Machine Learning, Sport Science, Python</p>
+        <div class="project-urls">
+          <a href="https://medium.com/nerd-for-tech/clustering-nba-player-using-k-means-7b568830edfd" target="_blank"><i class="fab fa-medium"></i></a>
+          <a href="https://github.com/riorizkiaryanto/clustering-nba-players" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://lookerstudio.google.com/reporting/031206f8-a5b8-4f02-85d5-6291234b9fb3/page/47KHD" target="_blank"><i class="fas fa-chart-line"></i></a>
+          <a class="detail" href="">View Case Study</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project" data-aos="fade-up">
+      <div class="project-image">
+        <img src="src/assets/blm.jpg">
+        <p>Photo by <a href="https://unsplash.com/@oladimeg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Oladimeji Odunsi</a> on <a href="https://unsplash.com/photos/persons-right-fist-grayscale-photography-e-TuK4z2LhY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
+      </div>
+      <div class="project-content">
+        <h2 class="title">Insights into Public Perception: Black Lives Matter Campaign Analysis</h2>
+        <p class="paragraph">Delve into our analysis of Twitter discourse surrounding the Black Lives Matter campaign, uncovering shifts in sentiment, key events shaping public reaction, and the diverse voices driving the movement for racial justice.</p>
+        <p class="note"><strong>Tags: </strong>Educational, Data Science, Machine Learning, Black Lives Matter, Python, Spark, Twitter</p>
+        <div class="project-urls">
+          <a href="https://medium.com/nerd-for-tech/clustering-nba-player-using-k-means-7b568830edfd" target="_blank"><i class="fab fa-medium"></i></a>
+          <a href="https://github.com/riorizkiaryanto/clustering-nba-players" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="detail" href="">View Case Study</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project" data-aos="fade-up">
+      <div class="project-image">
+        <img src="src/assets/text_emotion.jpg">
+        <p>Photo by <a href="https://unsplash.com/@martenbjork?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Marten Bjork</a> on <a href="https://unsplash.com/photos/person-holding-space-gray-iphone-x-FVtG38Cjc_k?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
+      </div>
+      <div class="project-content">
+        <h2 class="title">Unveiling Emotions: Text-based Emotion Detection</h2>
+        <p class="paragraph">Crafting an Advanced Data Model for Accurate Emotion Detection in Indonesian Text</p>
+        <p class="note"><strong>Tags: </strong>Educational, Data Science, Machine Learning, NLP, Python</p>
+        <div class="project-urls">
+          <a href="https://riorizkiaryanto.medium.com/emotion-analysis-for-topic-mudik-during-covid-19-pandemic-56d19bc61aa1" target="_blank"><i class="fab fa-medium"></i></a>
+          <a href="https://github.com/riorizkiaryanto/emotion-detection-on-text" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="detail" href="">View Case Study</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project" data-aos="fade-up">
+      <div class="project-image">
+        <img src="src/assets/audience_segmentation.jpg">
+        <p>Photo by <a href="https://unsplash.com/@myphotos297?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">84 Video</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-cell-phone-with-various-app-icons-X8ejw0g0C_g?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+      </div>
+      <div class="project-content">
+        <h2 class="title">Audience Segmentation Models</h2>
+        <p class="paragraph">Develop a audience segmentation model based on digital marketing:newsletter activities data to help client find their best audience for future campaigns.</p>
+        <p class="note"><strong>Tags: </strong>Professional, Data Science, Machine Learning, Clustering, RFM</p>
+        <div class="project-urls">
+          <a href="" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="detail" href="">View Case Study</a>
+        </div>
+      </div>
+    </div>
+  
+    <div class="project" data-aos="fade-up">
+      <div class="project-image">
+        <img src="src/assets/entity_recognition.jpg">
+        <p>Photo by <a href="https://unsplash.com/@martenbjork?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Marten Bjork</a> on <a href="https://unsplash.com/photos/person-opening-the-book-R4N7l_B7r2M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
+      </div>
+      <div class="project-content">
+        <h2 class="title">Unleashing the Potential of Hidden Markov Model in Named Entity Recognition for Indonesian Text</h2>
+        <p class="paragraph">Leveraging the Power of Hidden Markov Model: Advancing Named Entity Recognition for Indonesian Text.</p>
+        <p class="note"><strong>Tags: </strong>Professional, Data Science, Machine Learning, NLP, Python</p>
+        <div class="project-urls">
+          <a href="https://github.com/riorizkiaryanto/ner-hmm" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="detail" href="">View Case Study</a>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <div id="contacts-container" data-aos="fade-up">
