--- a/sensory_analytics_engine.html
+++ b/sensory_analytics_engine.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav>
-        <a href="./projects.html">All Projects</a>
+        <a href="./projects.html">Back to All Projects</a>
     </nav>
 
     <div id="case-study">
