update: added github repo for sensory analytic engine project

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
           <p class="paragraph">Designed and implemented a Python-based sensory analytics engine for a data analytics application. Focused on backend development, the engine utilized advanced methodologies to analyze sensory data, enabling clients to derive actionable insights efficiently.</p>
           <p class="note"><strong>Tags:</strong> Professional, Data Science, Sensory Analytics, Python, Software Development</p>
           <div class="project-urls">
-            <a href="" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/riorizkiaryanto/sensory-2afc-test" target="_blank"><i class="fab fa-github"></i></a>
             <a class="detail" href="./sensory_analytics_engine.html">View Case Study</a>
           </div>
         </div>
