update: project recommendation system page

--- a/chatbot_fallback_classifier.html
+++ b/chatbot_fallback_classifier.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <nav>
+        <a href="./index.html">Home</a>
         <a href="./projects.html">Back to All Projects</a>
     </nav>
 
@@ -35,33 +36,18 @@
             <hr>
             <div class="grid-container">
                 <div class="grid-item">
-                    <h2>1. Consultations</h2>
-                    <p>This stage involves understanding the client’s expectations and connecting them with the available data points.</p>
-                    <br>
-                    <p><strong>Key activities:</strong></p>
-                    <p>1. Identify client needs and expectations</p>
-                    <p>2. Analyze current data sources and their relevance to client goals</p>
-                    <p>3. Establish clear objectives for the dashboard</p>
+                    <h2>1. Data Preparation</h2>
+                    <p>The development process commenced with the meticulous cleaning and standardization of the client's existing data. This vital step aimed to guarantee that the forthcoming data model would exclusively incorporate high-quality, validated data.</p>
                 </div>
 
                 <div class="grid-item">
                     <h2>2. Development</h2>
-                    <p>In this stage, DAX queries are developed and related calculations are implemented in Power BI.</p>
-                    <br>
-                    <p><strong>Key activities:</strong></p>
-                    <p>1. Build DAX queries to extract, filter, and transform data</p>
-                    <p>2. Implement calculations for metrics and KPIs</p>
-                    <p>3. Ensuring data accuracy and consistency</p>
+                    <p>The initial stage of the project involved developing a data model utilizing the Convolutional Neural Network algorithm. This served as a foundational step before further refinement with more suitable algorithms.</p>
                 </div>
 
                 <div class="grid-item">
-                    <h2>3. Visualization</h2>
-                    <p>The focus is on visually presenting the data to make insights easily accessible to users</p>
-                    <br>
-                    <p><strong>Key activities:</strong></p>
-                    <p>1. Design intuitive and user-friendly elements for exploration</p>
-                    <p>2. Create interactive elements for explorations</p>
-                    <p>3. Incorporate storytelling techniques to convey insights effectively</p>
+                    <h2>3. Operational</h2>
+                    <p>Implement the developed data model into the real operational process and meticulously document any findings for future enhancements. This step also encompasses retraining the data model using the latest fallback data to ensure its continued relevance and effectiveness.</p>
                 </div>
             </div>
         </div>
@@ -74,7 +60,7 @@
         <div class="data-stack">
             <h2>Data Stack</h2>
             <hr>
-            <p>The project utilized a data stack consisting of Power BI, Denodo, Microsoft Excel</p>
+            <p>The project utilized a data stack consisting of Python, TensorFlow, Keras</p>
         </div>
     </div>
 
