--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p class="note"><strong>Tags: </strong>Professional, Data Science, NLP, Python</p>
         <div class="project-urls">
           <a href="" target="_blank"><i class="fab fa-github"></i></a>
-          <a class="detail" href="">View Case Study</a>
+          <a class="detail" href="./chatbot_fallback_classifier.html">View Case Study</a>
         </div>
       </div>
   </div>
@@ -110,7 +110,7 @@
       <p class="note"><strong>Tags: </strong>Professional, Consultant, Data Dashboard, Power BI</p>
       <div class="project-urls">
         <!-- <a href="" target="_blank"><i class="fab fa-github"></i></a> -->
-        <a class="detail" href="">View Case Study</a>
+        <a class="detail" href="./power_bi.html">View Case Study</a>
       </div>
     </div>
   </div>
