--- a/sensory_analytics_engine.html
+++ b/sensory_analytics_engine.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <nav>
+        <a href="./index.html">Home</a>
         <a href="./projects.html">Back to All Projects</a>
     </nav>
 
