update: project link addition in home page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <p class="note"><strong>Tags: </strong>Personal, Data Science, Machine Learning, Looker, Python</p>
       <div class="project-urls">
         <a href="https://lookerstudio.google.com/reporting/ca55cecd-6cfd-4d30-9ae8-c344ccb524a7/page/A5mE" target="_blank"><i class="fas fa-chart-line"></i></a>
-        <a class="detail" href="">View Case Study</a>
+        <a class="detail" href="./netflix.html">View Case Study</a>
       </div>
     </div>
   </div>
@@ -94,7 +94,7 @@
       <p class="note"><strong>Tags: </strong>Educational, Data Science, Machine Learning, Education, Python</p>
       <div class="project-urls">
         <a href="https://github.com/riorizkiaryanto/recommendation-system-undergraduate-program" target="_blank"><i class="fab fa-github"></i></a>
-        <a class="detail" href="">View Case Study</a>
+        <a class="detail" href="./recommendation_system.html">View Case Study</a>
       </div>
     </div>
   </div>
