update: all project - initial draft

--- a/about.html
+++ b/about.html
@@ -28,7 +28,8 @@
       <img src="src/assets/me_circle.png">
       <div>
         <h1>Rio Rizki Aryanto</h1>
-        <p>With 8 years of experience spanning consulting, advertising, and sensory analysis, I specialize in Python for data analysis, statistics, and machine learning, coupled with proficiency in back-end development. The objective is to leverage this expertise to drive data-driven outcomes within a collaborative team environment.</p>
+        <p>With 8 years of experience spanning consulting, advertising, and sensory analysis, I specialize in Python for data analysis, statistics, and machine learning, 
+          coupled with proficiency in back-end development. My objective is to leverage this expertise to drive data-driven outcomes within a collaborative team environment.</p>
       </div>
     </div>
   </div>
