--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p class="paragraph">Develop an automated fallback data classification tool to assist in categorizing user interactions where the chatbot fails, saving time and resources compared to manual classification. The tool will utilize deep learning algorithm i.e Convolutiional Neural Network.</p>
         <p class="note"><strong>Tags: </strong>Professional, Data Science, NLP, Python</p>
         <div class="project-urls">
-          <a href="" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="./not_found.html" target="_blank"><i class="fab fa-github"></i></a>
           <a class="detail" href="./chatbot_fallback_classifier.html">View Case Study</a>
         </div>
       </div>
