--- a/power_bi.html
+++ b/power_bi.html
@@ -14,11 +14,11 @@
 </head>
 <body>
     <nav>
-        <a href="./projects.html">Back to All Projects</a>
+        <a href="./index.html">Home</a>
+        <a href="./projects.html">Back to Projects</a>
     </nav>
 
     <div id="case-study">
-        <a href="./index.html">Home</a>
         <h1>Power BI - Dashboard Consulting and Development</h1>
 
         <div class="overview">
