--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
           <p class="paragraph">Develop an automated fallback data classification tool to assist in categorizing user interactions where the chatbot fails, saving time and resources compared to manual classification. The tool will utilize deep learning algorithm i.e Convolutiional Neural Network.</p>
           <p class="note"><strong>Tags: </strong>Professional, Data Science, NLP, Python</p>
           <div class="project-urls">
-            <a href="" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="./not_found.html" target="_blank"><i class="fab fa-github"></i></a>
             <a class="detail" href="chatbot_fallback_classifier.html">View Case Study</a>
           </div>
         </div>
@@ -113,8 +113,8 @@
         <p class="paragraph">Develop a project monitoring tool to provide transparent insights into budget, spending allocation, and mandays for ongoing projects. This tool will alleviate bottlenecks caused by limited access to project details by enabling quick summaries for the management team. Through intuitive dashboard features, the tool will offer real-time visibility into project progress, facilitating informed decision-making and resource optimization.</p>
         <p class="note"><strong>Tags: </strong>Professional, Python, Asana, Looker Studio</p>
         <div class="project-urls">
-          <a href="" target="_blank"><i class="fab fa-github"></i></a>
-          <a class="detail" href="">View Case Study</a>
+          <a href="./not_found.html" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="detail" href="./project_management_tracker.html">View Case Study</a>
         </div>
       </div>
     </div>
@@ -132,7 +132,7 @@
           <a href="https://medium.com/nerd-for-tech/clustering-nba-player-using-k-means-7b568830edfd" target="_blank"><i class="fab fa-medium"></i></a>
           <a href="https://github.com/riorizkiaryanto/clustering-nba-players" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://lookerstudio.google.com/reporting/031206f8-a5b8-4f02-85d5-6291234b9fb3/page/47KHD" target="_blank"><i class="fas fa-chart-line"></i></a>
-          <a class="detail" href="">View Case Study</a>
+          <a class="detail" href="./nba.html">View Case Study</a>
         </div>
       </div>
     </div>
@@ -149,7 +149,7 @@
         <div class="project-urls">
           <a href="https://medium.com/nerd-for-tech/clustering-nba-player-using-k-means-7b568830edfd" target="_blank"><i class="fab fa-medium"></i></a>
           <a href="https://github.com/riorizkiaryanto/clustering-nba-players" target="_blank"><i class="fab fa-github"></i></a>
-          <a class="detail" href="">View Case Study</a>
+          <a class="detail" href="./blm_campaign.html">View Case Study</a>
         </div>
       </div>
     </div>
@@ -166,7 +166,7 @@
         <div class="project-urls">
           <a href="https://riorizkiaryanto.medium.com/emotion-analysis-for-topic-mudik-during-covid-19-pandemic-56d19bc61aa1" target="_blank"><i class="fab fa-medium"></i></a>
           <a href="https://github.com/riorizkiaryanto/emotion-detection-on-text" target="_blank"><i class="fab fa-github"></i></a>
-          <a class="detail" href="">View Case Study</a>
+          <a class="detail" href="./emotion_analysis.html">View Case Study</a>
         </div>
       </div>
     </div>
@@ -181,8 +181,8 @@
         <p class="paragraph">Develop a audience segmentation model based on digital marketing:newsletter activities data to help client find their best audience for future campaigns.</p>
         <p class="note"><strong>Tags: </strong>Professional, Data Science, Machine Learning, Clustering, RFM</p>
         <div class="project-urls">
-          <a href="" target="_blank"><i class="fab fa-github"></i></a>
-          <a class="detail" href="">View Case Study</a>
+          <a href="./not_found.html" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="detail" href="./audience_segmentation.html">View Case Study</a>
         </div>
       </div>
     </div>
@@ -198,7 +198,7 @@
         <p class="note"><strong>Tags: </strong>Professional, Data Science, Machine Learning, NLP, Python</p>
         <div class="project-urls">
           <a href="https://github.com/riorizkiaryanto/ner-hmm" target="_blank"><i class="fab fa-github"></i></a>
-          <a class="detail" href="">View Case Study</a>
+          <a class="detail" href="./hmm.html">View Case Study</a>
         </div>
       </div>
     </div>
