--- a/recommendation_system.html
+++ b/recommendation_system.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <a href="./index.html">Home</a>
-        <a href="./projects.html">Back to All Projects</a>
+        <a href="./projects.html">Back to Projects</a>
     </nav>
 
     <div id="case-study">
